✨ feat: set up Sign in with Google

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       content="life in dot. helps people to create a beautiful lifelong journal with music and texts"
     />
     <title>life in dot.</title>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
