--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,29 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/assets/life-in-dot.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <title>
+      life in dot. - Visualized Life Journal | Create Your 100-year Life Profile
+    </title>
     <meta
       name="description"
-      content="life in dot. helps people to create a beautiful lifelong journal with music and texts"
+      content="Create your beautiful life profile and look around your 100-year life in dot."
     />
-    <title>life in dot.</title>
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.lifeindot.life/" />
+    <meta
+      property="og:title"
+      content="life in dot. - Visualized Life Journal | Create Your 100-year Life Profile"
+    />
+    <meta property="og:image" content="/assets/life-in-dot-logo.png" />
+    <meta property="og:site_name" content="life in dot." />
+    <meta
+      property="og:description"
+      content="Create your beautiful life profile and look around your 100-year life in dot."
+    />
+    <meta property="og:locale" content="en_US" />
+    <link rel="icon" href="%PUBLIC_URL%/assets/life-in-dot.png" />
     <script src="https://accounts.google.com/gsi/client" async defer></script>
   </head>
   <body>
