💄 style: add style on login page

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     />
     <meta property="og:locale" content="en_US" />
     <link rel="icon" href="%PUBLIC_URL%/assets/life-in-dot.png" />
-    <script src="http://accounts.google.com/gsi/client" async defer></script>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
